# self-improving-agent

./: .env.example  .gitignore  README.md  add_hard_csvs.py  agent.py  agent_improved.py  agent_status_quo.py  agent_status_quo_traced.py  analyze_traces.py  evaluate.py  generate_datasets.py  improve.py  pyproject.toml  run_iterations.py
data/: ground_truth.json
data/test/: test_100.csv
rules/: improvement_rules.json
scripts/: compare_runs.py  run_iterations.py
